[package]
name = "rust-mc-status"
version = "1.0.1"
edition = "2024"
description = ""
repository = ""
license = "MIT"
keywords = ["minecraft", "server", "status", "ping"]
categories = ["network-programming", "api-bindings", "asynchronous", "games"]

[dependencies]
tokio = { version = "1.47.1", features = ["full"] }
serde_json = "1.0.143"
serde = { version = "1.0.219", features = ["derive"] }
dashmap = "7.0.0-rc2"
once_cell = "1.21.3"
futures = "0.3.31"
thiserror = "2.0.16"
base64 = "0.22.1"

